--- a/index2.html
+++ b/index2.html
@@ -6,14 +6,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="fonts" href="https://www.1001fonts.com/quango-font.html?size=32">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/style2.css">
+    <link rel="stylesheet" href="style2.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <nav id="topnNav">
-      <ul>
+    <nav id="topnNav"> 
+      <ul> <!-- these won't go anywhere because I haven't imported the entire code set with active links -->
         <li><a href="../index.html">HOME</a></li>
         <li><a href="inspections/index.html" id="selected">INSPECTIONS</a></li>
         <li><a href="../testamonials/index.html">TESTAMONIALS</a></li>
